# Cargo.toml
[package]
name = "pingora_reverse_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = { version = "0.6", features = ["boringssl"] }
pingora-proxy = "0.6"
pingora-http = "0.6"
async-trait = "0.1"
pingora-core = "0.6.0"
rustls = "0.23.35"
dashmap = "6.1.0"
redis = "1.0.2"

[profile.release]
lto = true
codegen-units = 1
